--- a/lardataobj/AnalysisBase/CMakeLists.txt
+++ b/lardataobj/AnalysisBase/CMakeLists.txt
@@ -1,6 +1,6 @@
 cet_make(LIBRARIES canvas::canvas cetlib_except ROOT::Core NO_DICTIONARY)
 
-art_dictionary(DICTIONARY_LIBRARIES lardataobj_AnalysisBase lardataobj_RecoBase nusimdata_SimulationBase)
+art_dictionary(DICTIONARY_LIBRARIES lardataobj_AnalysisBase nusimdata_SimulationBase)
 
 install_headers()
 install_source()
