--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,8 +13,6 @@ project(lardataobj VERSION 09.03.06 LANGUAGES CXX)
 # cetbuildtools contains our cmake modules
 find_package(cetbuildtools REQUIRED)
 
-list(APPEND CMAKE_MODULE_PATH $ENV{CANVAS_ROOT_IO_DIR}/Modules)
-
 include(CetCMakeEnv)
 cet_cmake_env()
 
@@ -26,16 +24,17 @@ cet_set_compiler_flags(DIAGS CAUTIOUS
 
 cet_report_compiler_flags()
 
+find_package(cetlib_except REQUIRED PUBLIC)
+find_package(cetlib REQUIRED PUBLIC)
+find_package(messagefacility REQUIRED PUBLIC)
+find_package(canvas REQUIRED PUBLIC)
+find_package(canvas_root_io REQUIRED)
+find_package(nusimdata REQUIRED PUBLIC)
+find_package(Boost REQUIRED)
+find_package(ROOT COMPONENTS Core Physics GenVector Matrix REQUIRED)
 # these are minimum required versions, not the actual product versions
-find_ups_product( canvas )
-find_ups_product(messagefacility)
 find_ups_product( larcoreobj )
 find_ups_product( larcorealg )
-find_ups_product( nusimdata )
-find_ups_product( cetlib )
-find_ups_product( cetlib_except )
-find_ups_boost( )
-find_ups_root()
 
 # macros for artdaq_dictionary and simple_plugin
 include(ArtDictionary)
