--- a/lardataobj/RecoBase/CMakeLists.txt
+++ b/lardataobj/RecoBase/CMakeLists.txt
@@ -5,7 +5,7 @@ cet_make(LIBRARIES lardataobj_RawData
                    ROOT::Physics
                    ROOT::Matrix
                    ROOT::GenVector
-                   NO_DICTIONARY)
+                   NO_DICTIONARY) ### MIGRATE-ACTION-RECOMMENDED (migrate-3.05.03) - deprecated: use cet_make_library(), build_dictonary(), cet_plugin() with explicit source lists and plugin base types
 
 art_dictionary(DICTIONARY_LIBRARIES lardataobj_RecoBase)
 
