--- a/lardataobj/AnalysisBase/CMakeLists.txt
+++ b/lardataobj/AnalysisBase/CMakeLists.txt
@@ -1,4 +1,4 @@
-cet_make(LIBRARIES canvas::canvas cetlib_except ROOT::Core NO_DICTIONARY)
+cet_make(LIBRARIES canvas::canvas cetlib_except ROOT::Core NO_DICTIONARY) ### MIGRATE-ACTION-RECOMMENDED (migrate-3.05.03) - deprecated: use cet_make_library(), build_dictonary(), cet_plugin() with explicit source lists and plugin base types
 
 art_dictionary(DICTIONARY_LIBRARIES lardataobj_AnalysisBase nusimdata::SimulationBase)
 
