--- a/lardataobj/OpticalDetectorData/CMakeLists.txt
+++ b/lardataobj/OpticalDetectorData/CMakeLists.txt
@@ -1,4 +1,4 @@
-cet_make(NO_DICTIONARY)
+cet_make(NO_DICTIONARY) ### MIGRATE-ACTION-RECOMMENDED (migrate-3.05.03) - deprecated: use cet_make_library(), build_dictonary(), cet_plugin() with explicit source lists and plugin base types
 
 art_dictionary(DICTIONARY_LIBRARIES lardataobj_OpticalDetectorData)
 
