--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,12 +7,9 @@
 # ======================================================================
 
 cmake_minimum_required(VERSION 3.20 FATAL_ERROR)
-# cmake_policy(VERSION 3.19) ### MIGRATE-ACTION-COMPATIBILITY (migrate-3.05.03) - Uncomment to preseve compatibility with older CMake versions
 
 find_package(cetmodules REQUIRED)
 project(lardataobj VERSION 09.05.01 LANGUAGES CXX)
-
-# cetbuildtools contains our cmake modules
 
 include(CetCMakeEnv)
 cet_cmake_env()
@@ -23,7 +20,7 @@ cet_set_compiler_flags(DIAGS CAUTIOUS
   EXTRA_FLAGS -pedantic -Wno-unused-local-typedefs
 )
 
-cet_report_compiler_flags() ### MIGRATE-ACTION-RECOMMENDED (migrate-3.05.03) - add args: REPORT_THRESHOLD VERBOSE
+cet_report_compiler_flags(REPORT_THRESHOLD VERBOSE)
 
 find_package(cetlib_except REQUIRED EXPORT)
 find_package(cetlib REQUIRED EXPORT)
@@ -33,14 +30,10 @@ find_package(canvas_root_io REQUIRED)
 find_package(nusimdata REQUIRED EXPORT)
 find_package(Boost REQUIRED)
 find_package(ROOT COMPONENTS Core Physics GenVector Matrix REQUIRED EXPORT)
-# these are minimum required versions, not the actual product versions
 find_package( larcoreobj REQUIRED )
 find_package( larcorealg REQUIRED )
 
-# macros for artdaq_dictionary and simple_plugin
-include(ArtDictionary)
-include(CetMake)
-include(BasicPlugin)
+include(BuildDictionary)
 
 # source
 add_subdirectory(lardataobj)
