--- a/lardataobj/AnalysisBase/CMakeLists.txt
+++ b/lardataobj/AnalysisBase/CMakeLists.txt
@@ -1,6 +1,17 @@
-cet_make(LIBRARIES canvas::canvas cetlib_except ROOT::Core NO_DICTIONARY) ### MIGRATE-ACTION-RECOMMENDED (migrate-3.05.03) - deprecated: use cet_make_library(), build_dictonary(), cet_plugin() with explicit source lists and plugin base types
+cet_make_library(
+      SOURCE
+        Calorimetry.cxx
+        CosmicTag.cxx
+        FlashMatch.cxx
+        MVAOutput.cxx
+        ParticleID.cxx
+        T0.cxx
+      LIBRARIES
+        canvas::canvas
+        cetlib_except::cetlib_except
+        ROOT::Core)
 
-art_dictionary(DICTIONARY_LIBRARIES lardataobj_AnalysisBase nusimdata::SimulationBase)
+build_dictionary(DICTIONARY_LIBRARIES lardataobj_AnalysisBase nusimdata::SimulationBase)
 
 install_headers()
 install_source()
