--- a/lardataobj/MCBase/CMakeLists.txt
+++ b/lardataobj/MCBase/CMakeLists.txt
@@ -1,11 +1,19 @@
-cet_make(NO_DICTIONARY
+cet_make_library(
+         SOURCE
+           MCBaseException.cxx
+           MCHitCollection.cxx
+           MCHit.cxx
+           MCShower.cxx
+           MCTrack.cxx
+           MCWireCollection.cxx
+           MCWire.cxx
          LIBRARIES
            nusimdata::SimulationBase
            ROOT::Core
            ROOT::Physics
-         ) ### MIGRATE-ACTION-RECOMMENDED (migrate-3.05.03) - deprecated: use cet_make_library(), build_dictonary(), cet_plugin() with explicit source lists and plugin base types
+         )
 
-art_dictionary(DICTIONARY_LIBRARIES lardataobj_MCBase)
+build_dictionary(DICTIONARY_LIBRARIES lardataobj_MCBase canvas::canvas)
 
 install_headers()
 install_source()
