--- a/lardataobj/OpticalDetectorData/CMakeLists.txt
+++ b/lardataobj/OpticalDetectorData/CMakeLists.txt
@@ -1,6 +1,6 @@
-cet_make(NO_DICTIONARY) ### MIGRATE-ACTION-RECOMMENDED (migrate-3.05.03) - deprecated: use cet_make_library(), build_dictonary(), cet_plugin() with explicit source lists and plugin base types
+cet_make_library(SOURCE OpticalDetectorData.cxx)
 
-art_dictionary(DICTIONARY_LIBRARIES lardataobj_OpticalDetectorData)
+build_dictionary(DICTIONARY_LIBRARIES lardataobj_OpticalDetectorData canvas::canvas)
 
 install_headers()
 install_source()
