--- a/lardataobj/RecoBase/AssnsDicts/CMakeLists.txt
+++ b/lardataobj/RecoBase/AssnsDicts/CMakeLists.txt
@@ -1,4 +1,4 @@
-art_dictionary(DICTIONARY_LIBRARIES lardataobj_RecoBase)
+build_dictionary(DICTIONARY_LIBRARIES lardataobj_RecoBase)
 
 install_headers()
 install_source()
