--- a/lardataobj/Simulation/CMakeLists.txt
+++ b/lardataobj/Simulation/CMakeLists.txt
@@ -6,12 +6,14 @@ cet_make_library(
            SimPhotons.cxx
            SupernovaTruth.cxx
          LIBRARIES
-           nusimdata::SimulationBase
            canvas::canvas
            messagefacility::MF_MessageLogger
            ROOT::GenVector
            ROOT::Core
            ROOT::Physics
+           PUBLIC
+           nusimdata::SimulationBase
+           larcoreobj::headers
          )
 
 build_dictionary(DICTIONARY_LIBRARIES lardataobj_Simulation)
