Improve CMake use and tighten dependencies
* Specify all dependencies as PUBLIC / PRIVATE / INTERFACE.

* New INTERFACE targets:

  * lardataobj::RDTimeStamp

  * lardataobj::TrackingTypes

  * lardataobj::TrackFitHitInfo

  * lardataobj::sim

  * lardataobj::GeneratedParticleInfo

* Remove unnecessary library lardataobj::OpticalDetectorData.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,16 +22,18 @@ cet_set_compiler_flags(DIAGS CAUTIOUS
 
 cet_report_compiler_flags(REPORT_THRESHOLD VERBOSE)
 
-find_package(cetlib_except REQUIRED EXPORT)
-find_package(cetlib REQUIRED EXPORT)
-find_package(messagefacility REQUIRED EXPORT)
-find_package(canvas REQUIRED EXPORT)
-find_package(canvas_root_io REQUIRED)
 find_package(nusimdata REQUIRED EXPORT)
-find_package(Boost REQUIRED)
-find_package(ROOT COMPONENTS Core Physics GenVector Matrix REQUIRED EXPORT)
-find_package( larcoreobj REQUIRED EXPORT)
-find_package( larcorealg REQUIRED EXPORT)
+
+find_package(canvas_root_io REQUIRED EXPORT)
+find_package(canvas REQUIRED EXPORT)
+find_package(messagefacility REQUIRED EXPORT)
+find_package(cetlib_except REQUIRED EXPORT)
+
+find_package(Boost COMPONENTS HEADERS REQUIRED EXPORT)
+find_package(ROOT COMPONENTS Core GenVector MathCore Matrix Physics REQUIRED EXPORT)
+
+find_package(larcoreobj REQUIRED EXPORT)
+find_package(larcorealg REQUIRED EXPORT)
 
 include(BuildDictionary)
 
