--- a/lardataobj/MCBase/CMakeLists.txt
+++ b/lardataobj/MCBase/CMakeLists.txt
@@ -1,19 +1,21 @@
-cet_make_library(
-         SOURCE
-           MCBaseException.cxx
-           MCHitCollection.cxx
-           MCHit.cxx
-           MCShower.cxx
-           MCTrack.cxx
-           MCWireCollection.cxx
-           MCWire.cxx
-         LIBRARIES
-           nusimdata::SimulationBase
-           ROOT::Core
-           ROOT::Physics
-         )
+cet_make_library(SOURCE
+  MCBaseException.cxx
+  MCHitCollection.cxx
+  MCHit.cxx
+  MCShower.cxx
+  MCStep.h
+  MCTrack.cxx
+  MCWireCollection.cxx
+  MCWire.cxx
+  LIBRARIES
+  PUBLIC
+  nusimdata::SimulationBase
+  ROOT::Physics
+)
 
-build_dictionary(DICTIONARY_LIBRARIES lardataobj_MCBase canvas::canvas)
+build_dictionary(DICTIONARY_LIBRARIES
+  lardataobj::MCBase canvas::canvas
+)
 
 install_headers()
 install_source()
