--- a/lardataobj/OpticalDetectorData/CMakeLists.txt
+++ b/lardataobj/OpticalDetectorData/CMakeLists.txt
@@ -1,6 +1,6 @@
-cet_make_library(SOURCE OpticalDetectorData.cxx)
-
-build_dictionary(DICTIONARY_LIBRARIES lardataobj_OpticalDetectorData canvas::canvas)
+build_dictionary(DICTIONARY_LIBRARIES
+  canvas::canvas
+)
 
 install_headers()
 install_source()
