--- a/lardataobj/RawData/CMakeLists.txt
+++ b/lardataobj/RawData/CMakeLists.txt
@@ -1,21 +1,27 @@
-cet_make_library(
-         SOURCE
-           AuxDetDigit.cxx
-           BeamInfo.cxx
-           DAQHeader.cxx
-           ExternalTrigger.cxx
-           OpDetPulse.cxx
-           raw.cxx
-           RawDigit.cxx
-           TriggerData.cxx
-         LIBRARIES
-           larcoreobj::SummaryData
-           canvas::canvas
-           messagefacility::MF_MessageLogger
-           cetlib_except::cetlib_except
-           ROOT::Core)
+cet_make_library(SOURCE
+  AuxDetDigit.cxx
+  BeamInfo.cxx
+  DAQHeader.cxx
+  ExternalTrigger.cxx
+  OpDetPulse.cxx
+  raw.cxx
+  RawDigit.cxx
+  RDTimeStamp.h
+  TriggerData.cxx
+  LIBRARIES
+  PUBLIC
+  Boost::headers
+  ROOT::Core
+  larcoreobj::headers
+  PRIVATE
+  messagefacility::MF_MessageLogger
+  cetlib_except::cetlib_except
+)
 
-build_dictionary(DICTIONARY_LIBRARIES lardataobj_RawData)
+build_dictionary(DICTIONARY_LIBRARIES
+  lardataobj::RawData
+  canvas::canvas
+)
 
 install_headers()
 install_source()
