--- a/test/RawData/CMakeLists.txt
+++ b/test/RawData/CMakeLists.txt
@@ -1,12 +1,16 @@
 # test raw data compression
 cet_test(raw_test USE_BOOST_UNIT
-  LIBRARIES lardataobj_RawData
-  )
+  LIBRARIES PRIVATE
+  lardataobj::RawData
+  larcoreobj::headers
+)
 
 # test data products
 cet_test(RawDigit_test USE_BOOST_UNIT
-  LIBRARIES lardataobj_RawData
-  )
+  LIBRARIES PRIVATE
+  lardataobj::RawData
+  larcoreobj::headers
+)
 
 install_headers()
 install_source()
