--- a/lardataobj/CMakeLists.txt
+++ b/lardataobj/CMakeLists.txt
@@ -1,7 +1,9 @@
-add_subdirectory(AnalysisBase)
-add_subdirectory(OpticalDetectorData)
+cet_make_library(HEADERS_TARGET_ONLY)
+
 add_subdirectory(RawData)
 add_subdirectory(RecoBase)
+add_subdirectory(AnalysisBase)
+add_subdirectory(OpticalDetectorData)
 add_subdirectory(MCBase)
 add_subdirectory(Utilities)
 add_subdirectory(Simulation)
