--- a/lardataobj/RecoBase/AssnsDicts/CMakeLists.txt
+++ b/lardataobj/RecoBase/AssnsDicts/CMakeLists.txt
@@ -1,4 +1,7 @@
-build_dictionary(DICTIONARY_LIBRARIES lardataobj_RecoBase)
+build_dictionary(DICTIONARY_LIBRARIES
+  lardataobj::RecoBase
+  canvas::canvas
+)
 
 install_headers()
 install_source()
