fix deprecation warning

--- a/lardataobj/Simulation/Compatibility/CMakeLists.txt
+++ b/lardataobj/Simulation/Compatibility/CMakeLists.txt
@@ -2,4 +2,4 @@ cet_make_library(SOURCE load_fixit_file.cxx
   LIBRARIES PRIVATE ROOT::RIO cetlib::cetlib)
 
 install_source()
-install_fw(simIDE_streamer_info.root)
+install_fw(LIST simIDE_streamer_info.root)
